--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,12 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+  margin: 1rem;
 }
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  text-align: center;
+  min-height: 10vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -19,15 +15,11 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.dropdowns {
+  padding: 1rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.text {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
 }
